# MCP101

./: .gitignore  report.md
.claude/: settings.local.json
course/: course.md
notes/: ch01.md  (+5 more)
practices/practice03/GitHubMCPServer/: .env.example  README.md  pyproject.toml  requirements.txt  test_server.py
practices/practice03/GitHubMCPServer/.trae/specs/github-mcp-server/: api-research.md  evaluation-scenarios.md  spec.md  tool-design.md  transport-decision.md
practices/practice03/GitHubMCPServer/scripts/: run_tool_tests.py
practices/practice03/GitHubMCPServer/src/github_mcp_server/: __init__.py  server.py
practices/practice03/GitHubMCPServer/src/github_mcp_server/tools/: __init__.py  get_file_content.py  get_issue_details.py  get_pull_request_details.py  list_pull_requests.py  list_repository_contents.py  search_code.py  search_issues.py
practices/practice03/GitHubMCPServer/src/github_mcp_server/utils/: __init__.py  api_client.py  cache.py  errors.py  formatters.py
practices/practice03/WechatOAMCPServer/: README.zh.md  pyproject.toml
practices/practice03/WechatOAMCPServer/.trae/specs/WechatOAMCPServer/: api-research.md  spec.md  tool-design.md  transport-decision.md
practices/practice03/WechatOAMCPServer/articles/: SUMMARY.md  cong-ming-de-yue-du-zhe-zi-xu-shi-jie-he-zhai-fang-ce-he-kuan.md  wo-shi-shui-guan-yu-ren-sheng-xu-shi-de-shi-ge-yao-dian.md
practices/practice03/WechatOAMCPServer/src/mcp_server_wechat_oa/: __init__.py  server.py
practices/practice03/WechatOAMCPServer/src/mcp_server_wechat_oa/tools/: __init__.py  tool_read.py  tool_summary.py
practices/practice03/WechatOAMCPServer/tests/: test_end_to_end.py
(+43 files in other folders)
