[project]
name = "github-mcp-server"
version = "0.1.0"
description = "MCP Server for GitHub API integration"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "Developer", email = "dev@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0", 
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/user/github-mcp-server"

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "black>=23.0", "isort>=5.12"]